test/samples/invalid/resolving/marg_shadow.maruir
struct M {
    b: bool;

}
fun foo<M>(a: u8)
